--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     try { firebaseConfig = JSON.parse(__firebase_config); } catch (e) { firebaseConfig = null; console.warn("Could not parse __firebase_config"); }
                  }
                 if (!firebaseConfig || !firebaseConfig.apiKey) {
-                    firebaseConfig = { apiKey: "AIzaSyDTLhIkrW9qk6KPT_gTDibIiJeVwWYTowk", authDomain: "my-study-dashboard.firebaseapp.com", databaseURL: "https://my-study-dashboard-default-rtdb.firebaseio.com", projectId: "my-study-dashboard", storageBucket: "my-study-dashboard.firebasestorage.app", messagingSenderId: "66307909031", appId: "1:66307909031:web:a077b8cf1a046069f80282" };
+                    firebaseConfig = { apiKey: "AIzaSyD8K4BwqwS9vQ-eldA1F865SvSs5Fv2J4M", authDomain: "gkeas-f93ec.firebaseapp.com", databaseURL: "https://gkeas-f93ec-default-rtdb.firebaseio.com", projectId: "gkeas-f93ec", storageBucket: "gkeas-f93ec.firebasestorage.app", messagingSenderId: "909744549158", appId: "1:909744549158:web:074ea3a35181960ec3e5e7" };
                  }
                 const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
                 const app = initializeApp(firebaseConfig);
@@ -1771,3 +1771,4 @@
     </script>
 </body>
     </html>
+
