--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                 if (user) {
                     // User is SIGNED IN
                     currentUserId = user.uid;
-                    const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+                    const appId = "rutine-f2ac1";
                     
                     // Set user-specific doc paths
                     const dataPath = `artifacts/${appId}/users/${currentUserId}/studyProgress/data_v4`;
@@ -2658,3 +2658,4 @@
     </script>
 </body>
                             </html>
+
