--- a/index.html
+++ b/index.html
@@ -879,139 +879,91 @@
         // v5.0: FIREBASE & AUTHENTICATION
         // ========================================================================
 
-        async function initializeAppFirebase() {
-            try {
-                let firebaseConfig;
-                if (typeof __firebase_config !== 'undefined') {
-                    try { firebaseConfig = JSON.parse(__firebase_config); } catch (e) { firebaseConfig = null; }
-                   }
-                if (!firebaseConfig || !firebaseConfig.apiKey) {
-                    firebaseConfig = {
-                        apiKey: "AIzaSyBWvyaFWIL0PV4VD33BJNQl3qP2k1IbQus",
-                        authDomain: "rutine-f2ac1.firebaseapp.com",
-                        projectId: "rutine-f2ac1",
-                        storageBucket: "rutine-f2ac1.firebasestorage.app",
-                        messagingSenderId: "161382347749",
-                        appId: "1:161382347749:web:a07ebafa5bdd35d480350c",
-                        measurementId: "G-BNC489N193"
-                    };
-                   }
-                
-                const app = initializeApp(firebaseConfig);
-                db = getFirestore(app);
-                auth = getAuth(app);
-                
-                try { await enableIndexedDbPersistence(db); } catch (err) { console.warn("Offline persistence failed:", err.code); }
+       async function initializeAppFirebase() {
+    console.log(">>> [Init] Starting Firebase initialization..."); // Init Log 1
+    try {
+        let firebaseConfig;
+        // ...(keep the existing firebaseConfig detection logic)...
+        if (!firebaseConfig || !firebaseConfig.apiKey) {
+            firebaseConfig = {
+                apiKey: "AIzaSyBWvyaFWIL0PV4VD33BJNQl3qP2k1IbQus",
+                authDomain: "rutine-f2ac1.firebaseapp.com",
+                projectId: "rutine-f2ac1",
+                storageBucket: "rutine-f2ac1.firebasestorage.app",
+                messagingSenderId: "161382347749",
+                appId: "1:161382347749:web:a07ebafa5bdd35d480350c",
+                measurementId: "G-BNC489N193"
+            };
+        }
+        console.log(">>> [Init] Firebase config loaded."); // Init Log 2
 
-                setupAuthStateListener();
+        const app = initializeApp(firebaseConfig);
+        console.log(">>> [Init] Firebase app initialized."); // Init Log 3
 
-               } catch (error) { 
-                console.error("Firebase Init Error:", error); 
-                googleLoginError.textContent = "Firebase init failed. Check config.";
-                googleLoginError.classList.remove('hidden');
-            }
-           }
+        db = getFirestore(app);
+        console.log(">>> [Init] Firestore instance obtained."); // Init Log 4
 
-   function setupAuthStateListener() {
-    console.log(">>> Setting up Auth State Listener..."); // Log A: Listener setup starts
+        auth = getAuth(app);
+        console.log(">>> [Init] Auth instance obtained:", auth ? 'OK' : ' FAILED!'); // Init Log 5 - Check Auth object
 
-    // Check if essential DOM elements exist right away
-    const loginScreenCheck = document.getElementById('login-screen');
-    const mainAppContainerCheck = document.getElementById('main-app-container');
-    const loadingElCheck = document.getElementById('loading');
-    if (!loginScreenCheck || !mainAppContainerCheck || !loadingElCheck) {
-        console.error(">>> CRITICAL ERROR: Essential DOM elements (loginScreen, mainAppContainer, or loadingEl) not found immediately!");
-        alert("Critical Error: UI elements missing. App cannot start."); // Show alert to user
-        return; // Stop further execution
+        if (!auth) {
+             console.error(">>> [Init] CRITICAL ERROR: getAuth(app) returned null or undefined!");
+             alert("Critical Error: Firebase Auth could not be initialized.");
+             return; // Stop if auth failed
+        }
+
+        try {
+             await enableIndexedDbPersistence(db);
+             console.log(">>> [Init] Offline persistence enabled/attempted."); // Init Log 6
+        } catch (err) {
+             console.warn(">>> [Init] Offline persistence failed:", err.code);
+        }
+
+        console.log(">>> [Init] Calling setupAuthStateListener..."); // Init Log 7
+        setupAuthStateListener(); // Call the listener setup
+        console.log(">>> [Init] setupAuthStateListener called."); // Init Log 8
+
+    } catch (error) {
+        console.error(">>> [Init] CRITICAL Firebase Init Error:", error); // Init Log Error
+        googleLoginError.textContent = "Firebase init failed. Check console.";
+        googleLoginError.classList.remove('hidden');
+        alert("Critical Error: Firebase Initialization Failed. Error: " + error.message);
     }
-    console.log(">>> Initial DOM element check passed."); // Log B: DOM check passed
+}
+  function setupAuthStateListener() {
+    console.log(">>> [Listener] Attaching Auth State Listener..."); // Listener Log 1
+
+    // Check if auth object is valid before attaching
+    if (!auth) {
+        console.error(">>> [Listener] CRITICAL ERROR: Cannot attach listener because 'auth' object is invalid!");
+        alert("Critical Error: Cannot listen for authentication changes.");
+        return;
+    }
 
     onAuthStateChanged(auth, (user) => {
-        console.log(">>> Auth state changed. User object:", user ? user.uid : 'null'); // Log C: Auth state changed
+        // --->>> THIS IS THE MOST IMPORTANT LOG <<<---
+        console.log(">>> [Listener Callback] Auth state HAS changed. User object present:", !!user); // Listener Log 2
 
+        // (Keep the rest of the function code from the previous step, including all the try...catch blocks and Step 1-9 logs)
         if (user) {
-            console.log(">>> Step 1: User signed in successfully. UID:", user.uid); // Log 1
-
-            try {
-                currentUserId = user.uid;
-                const appId = "rutine-f2ac1"; // Ensure this is correct
-
-                // Check DOM elements needed for UI updates
-                const settingsUserImgCheck = document.getElementById('settings-user-img');
-                const settingsUserNameCheck = document.getElementById('settings-user-name');
-                const settingsUserEmailCheck = document.getElementById('settings-user-email');
-                if (!settingsUserImgCheck || !settingsUserNameCheck || !settingsUserEmailCheck) {
-                     console.error(">>> ERROR: Settings modal elements not found!");
-                     // Continue execution but log the error
-                } else {
-                     console.log(">>> Settings modal elements found.");
-                     // Update settings modal UI only if elements exist
-                     settingsUserImgCheck.src = user.photoURL || 'data:image/svg+xml;base64,...'; // Use the placeholder SVG
-                     settingsUserNameCheck.textContent = user.displayName || 'App User';
-                     settingsUserEmailCheck.textContent = user.email || 'No email provided';
-                }
-
-                // Set user-specific doc paths (wrap in try-catch)
-                console.log(">>> Attempting to set Firestore doc paths...");
-                const dataPath = `artifacts/${appId}/users/${currentUserId}/studyProgress/data_v4`;
-                const settingsPath = `artifacts/${appId}/users/${currentUserId}/studyProgress/settings_v1`;
-                dbDocRef = doc(db, dataPath);
-                settingsDocRef = doc(db, settingsPath);
-                console.log(">>> Step 2: Firestore paths set successfully."); // Log 2
-
-                // Load user's data and settings (wrap in try-catch)
-                console.log(">>> Step 3: Attempting to call loadSettingsFromFirestore..."); // Log 3
-                loadSettingsFromFirestore(); // Must load settings first
-
-                // Show the main app (UI Update Logic - wrap in try-catch)
-                console.log(">>> Step 6: Attempting UI update (hide login, show app)..."); // Log 6
-                const loginScreenEl = document.getElementById('login-screen'); // Re-get element just in case
-                const mainAppEl = document.getElementById('main-app-container');
-                const loadingSpinnerEl = document.getElementById('loading');
-
-                if (loginScreenEl && mainAppEl && loadingSpinnerEl) {
-                    loginScreenEl.classList.add('hidden');
-                    console.log(">>> Step 7: Login screen hidden."); // Log 7
-                    mainAppEl.classList.remove('hidden');
-                    console.log(">>> Step 8: Main app container shown."); // Log 8
-                    loadingSpinnerEl.classList.remove('hidden'); // Show "Loading Dashboard..."
-                    console.log(">>> Step 9: Loading spinner shown."); // Log 9
-                } else {
-                    console.error(">>> CRITICAL ERROR during UI update: One or more essential elements became null!");
-                    alert("Critical Error during UI update. App state might be inconsistent.");
-                }
-
-            } catch (error) {
-                console.error(">>> CRITICAL ERROR inside 'if (user)' block:", error); // <-- Catch errors inside the main block
-                alert("An error occurred after login. Check the console for details. Error: " + error.message); // Show alert
-            }
-
+             console.log(">>> Step 1: User signed in successfully. UID:", user.uid);
+             try {
+                 currentUserId = user.uid;
+                 const appId = "rutine-f2ac1";
+                 // ... rest of the code for signed-in user ...
+                 console.log(">>> Step 9: Loading spinner shown.");
+             } catch (error) {
+                 console.error(">>> CRITICAL ERROR inside 'if (user)' block:", error);
+                 alert("An error occurred after login. Check the console. Error: " + error.message);
+             }
         } else {
-            // User is SIGNED OUT (Keep existing code from previous version)
-            console.log(">>> User signed out or authentication failed."); // <-- Sign Out Log
-            currentUserId = null;
-            cleanupListenersAndState();
-
-            const loginScreenEl = document.getElementById('login-screen'); // Re-get elements
-            const mainAppEl = document.getElementById('main-app-container');
-            const loadingSpinnerEl = document.getElementById('loading');
-            const googleLoginErrorEl = document.getElementById('google-login-error');
-            const googleLoginTextEl = document.getElementById('google-login-text');
-            const googleLoginBtnEl = document.getElementById('google-login-btn');
-
-
-            if (loginScreenEl) loginScreenEl.classList.remove('hidden');
-            if (mainAppEl) mainAppEl.classList.add('hidden');
-            if (loadingSpinnerEl) loadingSpinnerEl.classList.add('hidden');
-            if (googleLoginErrorEl) googleLoginErrorEl.classList.add('hidden');
-            if (googleLoginTextEl) googleLoginTextEl.textContent = 'Sign In with Google';
-            if (googleLoginBtnEl) googleLoginBtnEl.disabled = false;
+             // ... rest of the code for signed-out user ...
              console.log(">>> Showing login screen for signed out user.");
         }
     });
 
-    console.log(">>> Auth state listener attached successfully."); // Log D: Listener attached
-}
+    console.log(">>> [Listener] Auth state listener attached successfully."); // Listener Log 3
+ }
 // --- Add logs inside Firestore loading functions ---
 
 function loadSettingsFromFirestore() {
@@ -2711,6 +2663,7 @@ function loadSettingsFromFirestore() {
     </script>
 </body>
                             </html>
+
 
 
 
